# ModuleCMakeBuildSystemConfiguration

./: .gitignore
Demo/: CMakeLists.txt
Demo/Api/: CMakeLists.txt
Demo/Api/source/: api_impl.cpp  api_impl.hpp
Demo/Api/test/: CMakeLists.txt  main.cpp
Demo/ApiIntgTest/: CMakeLists.txt
Demo/ApiIntgTest/source/: main.cpp
Demo/ThirdParties/: CMakeLists.txt
Demo/ThirdParties/Module4/1.0.0/lib/static/: api1.lib
